# custos

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CORPUS.md  Caddyfile  Dockerfile  EVALS.md  Makefile  README.md  ROSTER_LESSONS.md  THREAT_MODEL.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  secrets.yml
corpus/: generate.py
corpus/output/: faq-001.md  finance-001.md  handbook-001.md  hr-001.md  it-001.md  macro-001.md  manifest.yaml  manual-002.md  pricing-001.md  sop-001.md
data/: counters.json
docs/: BLOCK_RECAPS.md  DECISIONS.md  DEPLOY_RUNBOOK.md  HANDBOOK.md  RED_TEAM.md  SECURITY.md  WISHLIST.md
docs/decisions/: 001-vector-store.md  002-embeddings.md  003-llm-provider.md  004-chunking-and-citations.md  005-pii-redaction.md
evals/: __init__.py  harness.py
evals/suites/: access_control.py  action_gating.py  exfiltration.py  injection.py  limits.py  pii.py  retrieval.py
scripts/: budget-alert.sh
src/custos/: __init__.py  agent_loop.py  api.py  boot.py  chunker.py  embedder.py  ingest.py  injection_detector.py  interfaces.py  llm.py  pending_actions.py  pii.py  rate_limiter.py  retriever.py  tool_registry.py  vector_store.py
src/custos/tools/: __init__.py  file_ticket.py  search_documents.py  send_email.py  summarize_section.py
tests/: test_agent_loop.py  test_api.py  test_boot_readiness.py  test_chunker.py  test_confirm.py  test_corpus.py  test_history.py  test_injection_detector.py  test_interfaces.py  test_llm.py  test_pending_actions.py  test_pii.py  test_rate_limiter.py  test_retriever.py  test_stream.py  test_tool_registry.py  test_tools.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
ui/design-reference/: product-ui.html
ui/public/: _headers
ui/src/: App.tsx  api.ts  index.css  tokens.css  types.ts
ui/src/__tests__/: ChatInput.test.tsx  Message.test.tsx  (+1 more)
(+14 files in other folders)
