[project]
name = "custos"
version = "0.1.0"
description = "Private, agentic AI assistant that answers from a business's own documents."
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.40,<1",
    "fastapi>=0.115,<1",
    "fpdf2>=2.8.1,<3",
    "numpy>=1.26,<2",
    "pyyaml>=6.0,<7",
    "qdrant-client>=1.12,<2",
    "scipy>=1.13,<1.14",
    "sentence-transformers>=3.3,<4",
    "torch>=2.2,<2.3",
    "transformers>=4.45,<4.50",
    "sse-starlette>=2.0,<3",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8.0,<9",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "types-PyYAML>=6.0,<7",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = [
    "S101",  # assert is fine in tests
    "S603",  # subprocess calls in tests use controlled inputs
]

[tool.ruff.lint.per-file-ignores]
"evals/suites/*.py" = ["TCH001"]  # EvalResult needed at runtime, not just type checking
"src/custos/ingest.py" = ["TCH001"]  # Chunk and Embedder used at runtime
"src/custos/agent_loop.py" = ["TCH001", "TCH003"]  # ToolRegistry, Generator used at runtime
"src/custos/api.py" = ["TCH001", "TCH003"]  # Chunk, AsyncGenerator used at runtime
"src/custos/llm.py" = ["TCH003"]  # Generator used at runtime in stream_raw
"src/custos/tool_registry.py" = ["TCH001"]  # Tool used at runtime
"src/custos/vector_store.py" = ["TCH003"]  # uuid used at runtime in _stable_id

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
